Fix spacing problems

--- a/_sass/another/_header.scss
+++ b/_sass/another/_header.scss
@@ -38,7 +38,7 @@
 
 .menu-toggle--btn-container {
   position: absolute;
-  left: 3.3333333335%;
+  left: 15px;
   z-index: 1;
   background: transparent;
   margin: 0;
